# AgentHandover

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  ExecutionFeedbackLoop  LAUNCH_PLAYBOOK.html  LAUNCH_PLAYBOOK.md  LICENSE  LISTS.md  LOG.md  README.md  ROADMAP.md  config.example.toml  justfile  package-lock.json  package.json  pyproject.toml
app/AgentHandoverApp/: Package.swift
crates/cli/: Cargo.toml
crates/cli/src/: display.rs  main.rs  paths.rs
crates/cli/src/commands/: config.rs  doctor.rs  export.rs  focus.rs  logs.rs  mod.rs  search.rs  service.rs  setup.rs  sops.rs  status.rs  uninstall.rs  watch.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  event.rs  focus_session.rs  lib.rs  pid.rs  redaction.rs  status.rs
crates/common/tests/: config_test.rs  event_test.rs  redaction_test.rs  test_status.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: control.rs  lib.rs  main.rs  observation.rs
crates/daemon/src/capture/: clipboard.rs  dhash.rs  jpeg_converter.rs  mod.rs  screenshot.rs
crates/daemon/src/ipc/: cdp_bridge.rs  mod.rs  native_messaging.rs
crates/daemon/src/observer/: collector.rs  dwell.rs  event_loop.rs  focus_session.rs  health.rs  mod.rs
crates/daemon/src/platform/: applescript_bridge.rs  electron_detect.rs  macos.rs  macos_accessibility.rs  macos_clipboard.rs  macos_ocr.rs  macos_power.rs  macos_windows.rs  mod.rs  objc_try_catch.m
crates/daemon/tests/: accessibility_test.rs  cdp_test.rs  clipboard_test.rs  dwell_test.rs  electron_test.rs  event_loop_test.rs  health_test.rs  idle_test.rs  native_messaging_test.rs  power_test.rs  screenshot_test.rs  window_test.rs
crates/storage/: Cargo.toml
crates/storage/src/: artifact_store.rs  lib.rs  maintenance.rs  schema.rs
crates/storage/src/migrations/: mod.rs  v001_initial.sql  v002_add_display_ids_spanned.sql  v003_add_scene_annotation.sql
crates/storage/tests/: artifact_test.rs  maintenance_test.rs  storage_test.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: artifact.rs  lib.rs  pipeline.rs  recorder.rs  replayer.rs
crates/test-harness/tests/: artifact_test.rs  harness_test.rs  pipeline_test.rs  privacy_test.rs
extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js
extension/src/: background.ts  click-capture.ts  content.ts  dom-capture.ts  dwell-tracker.ts  native-messaging.ts  secure-field.ts  types.ts
extension/tests/: click-capture.test.ts  dom-capture.test.ts  (+3 more)
scripts/: build-pkg.sh  install-native-host.sh  setup.sh  test-passive-e2e.py  uninstall.sh
website/: index.html
worker/: pyproject.toml
worker/src/agenthandover_worker/: __init__.py  __main__.py  activity_classifier.py  agent_connect.py  behavioral_synthesizer.py  branch_extractor.py  bundle_compiler.py  claude_skill_writer.py  cleanup.py  clipboard_linker.py  confidence.py  constraint_manager.py  continuity_tracker.py  correction_detector.py  css_filter.py  daily_digest.py  daily_processor.py  db.py  decision_extractor.py  episode_builder.py  escalation_handler.py  evidence_extractor.py  evidence_normalizer.py  evidence_tracker.py  execution_monitor.py  export_adapter.py  exporter.py  focus_processor.py  focus_questioner.py  frame_differ.py  generic_writer.py  kb_sync.py  knowledge_base.py  knowledge_export_adapter.py  lifecycle_manager.py  llm_reasoning.py  main.py  mcp_server.py  model_profiles.py  negative_demo.py  (+39 more)
worker/src/agenthandover_worker/backends/: __init__.py  _json_parser.py  _timeout.py  anthropic.py  google_genai.py  llama_cpp.py  mlx_vlm.py  ollama.py  openai_compat.py
worker/src/agenthandover_worker/models/: __init__.py  semantic_step.py
worker/src/oc_apprentice_worker/: __init__.py  __main__.py  account_detector.py  activity_classifier.py  activity_search.py  branch_extractor.py  bundle_compiler.py  claude_skill_writer.py  clipboard_linker.py  confidence.py  config_validator.py  constraint_manager.py  continuity_tracker.py  correction_detector.py  daily_digest.py  daily_processor.py  db.py  decision_extractor.py  deep_scan.py  episode_builder.py  escalation_handler.py  event_helpers.py  evidence_normalizer.py  evidence_tracker.py  execution_monitor.py  export_adapter.py  exporter.py  focus_processor.py  frame_differ.py  generic_writer.py  injection_defense.py  kb_sync.py  knowledge_base.py  knowledge_export_adapter.py  lifecycle_manager.py  main.py  negative_demo.py  openclaw_writer.py  ops_telemetry.py  outcome_tracker.py  (+31 more)
worker/src/oc_apprentice_worker/backends/: __init__.py  anthropic.py  google_genai.py  llama_cpp.py  mlx_vlm.py  ollama.py  openai_compat.py
worker/tests/: conftest.py  test_account_detector.py  test_activity_classifier.py  test_activity_search.py  test_agent_connect.py  test_backends_anthropic.py  test_backends_google.py  test_behavioral_synthesizer.py  test_branch_extractor.py  test_bundle_compiler.py  test_claude_skill_writer.py  test_cleanup.py  test_clipboard_linker.py  test_confidence.py  test_confidence_evidence.py  test_config_validator.py  test_constraint_manager.py  test_continuity_tracker.py  test_correction_detector.py  test_css_filter.py  test_curation_api.py  test_daily_digest.py  test_daily_processor.py  test_db.py  test_decision_extractor.py  test_deep_scan.py  test_episode_builder.py  test_episode_builder_enhanced.py  test_escalation_handler.py  test_evidence_extractor.py  test_evidence_normalizer.py  test_evidence_tracker.py  test_execution_monitor.py  test_export_adapter.py  test_exporter.py  test_exporter_enhanced.py  test_feature_toggles.py  test_focus_processor.py  test_focus_questioner.py  test_focus_session.py  (+62 more)
worker/tests/eval/: baseline_scorecard.json  metrics.py  replay_runner.py  scorecard.py  scorer.py
worker/tests/fixtures/replay/: cross_app_research_workflow.json  entertainment_detour.json  interruption_resume_workflow.json  long_gap_resumption.json  morning_expense_interruptions.json  multi_day_recurring_standup.json  noise_heavy_browsing_session.json  similar_but_different_sops.json  stale_and_draft_procedures.json
(+57 files in other folders)
