[workspace]
resolver = "2"
members = [
    "crates/daemon",
    "crates/common",
    "crates/storage",
    "crates/test-harness",
    "crates/cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serial_test = "3"
