[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oc-apprentice-worker"
version = "0.1.0"
description = "OpenMimic apprentice worker — episode building, semantic translation, SOP induction"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/oc_apprentice_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
