[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oc-apprentice-worker"
version = "0.1.0"
description = "OpenMimic apprentice worker — episode building, semantic translation, SOP induction"
requires-python = ">=3.11"
dependencies = ["prefixspan>=0.5.2", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
vlm-apple = ["mlx-vlm>=0.1"]
vlm-cpu = ["llama-cpp-python>=0.2"]
vlm-ollama = ["ollama>=0.3"]
vlm-openai = ["openai>=1.0"]
vlm-anthropic = ["anthropic>=0.39"]
vlm-google = ["google-genai>=1.0"]
vlm-remote = ["openai>=1.0", "anthropic>=0.39", "google-genai>=1.0"]
vlm = [
    "mlx-vlm>=0.1; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "llama-cpp-python>=0.2; platform_machine != 'arm64' or sys_platform != 'darwin'",
]
vlm-all = [
    "mlx-vlm>=0.1; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "llama-cpp-python>=0.2",
    "ollama>=0.3",
    "openai>=1.0",
    "anthropic>=0.39",
    "google-genai>=1.0",
]

[project.scripts]
oc-apprentice-worker = "oc_apprentice_worker.main:main"
oc-setup-vlm = "oc_apprentice_worker.setup_vlm:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oc_apprentice_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
