[package]
name = "oc-apprentice-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
directories = "6"
