[package]
name = "oc-apprentice-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "oc_apprentice_daemon"
path = "src/lib.rs"

[[bin]]
name = "oc-apprentice-daemon"
path = "src/main.rs"

[dependencies]
oc-apprentice-common = { path = "../common" }
oc-apprentice-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2 = "0.10"
hex = "0.4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
accessibility-sys = "0.2"
