[package]
name = "oc-apprentice-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "oc_apprentice_daemon"
path = "src/lib.rs"

[[bin]]
name = "oc-apprentice-daemon"
path = "src/main.rs"

[dependencies]
oc-apprentice-common = { path = "../common" }
oc-apprentice-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
sha2 = "0.10"
hex = "0.4"
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
serial_test.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
accessibility-sys = "0.2"
