[package]
name = "agenthandover-test-harness"
version.workspace = true
edition.workspace = true

[dependencies]
agenthandover-common = { path = "../common" }
agenthandover-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
